@@ -1,3 +1,9 @@
+2001-03-20  Andreas Schwab  <schwab@suse.de>
+
+	* elf32-m68k.c (elf_m68k_relocate_section): Don't need the
+	relocation value when resolving a reference from a debugging
+	section.
+
 2001-03-16  Philip Blundell  <philb@gnu.org>
 
 	* configure: Regenerate.
